--- a/index.html
+++ b/index.html
@@ -247,6 +247,7 @@
       <button class="error__button" href="#">Попробовать снова</button>
     </div>
   </template>
-
+  <script src="js/common.js"></script>
+  <script src="js/map.js"></script>
 </body>
 </html>
