Личный проект: модуляция

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="map__overlay">
           <h2 class="map__title">И снова Токио!</h2>
         </div>
-        <button class="map__pin map__pin--main" style="left: 570px; top: 375px;">
+        <button class="map__pin map__pin--main" style="left: 570px; top: 375px;" draggable="true">
           <img src="img/muffin-red.svg" width="40" height="44" draggable="false" alt="Метка объявления">
           <svg viewBox="0 0 70 70" width="156" height="156" aria-label="Метка для поиска жилья">
             <defs>
@@ -248,6 +248,10 @@
     </div>
   </template>
   <script src="js/common.js"></script>
+  <script src="js/data.js"></script>
+  <script src="js/pin.js"></script>
+  <script src="js/card.js"></script>
+  <script src="js/form.js"></script>
   <script src="js/map.js"></script>
 </body>
 </html>
