--- a/index.html
+++ b/index.html
@@ -247,10 +247,12 @@
       <button class="error__button" href="#">Попробовать снова</button>
     </div>
   </template>
+  <script src="js/debounce.js"></script>
   <script src="js/backend.js"></script>
   <script src="js/pin.js"></script>
   <script src="js/card.js"></script>
   <script src="js/form.js"></script>
   <script src="js/map.js"></script>
+  <script src="js/filter.js"></script>
 </body>
 </html>
