--- a/index.html
+++ b/index.html
@@ -253,5 +253,6 @@
   <script src="js/form.js"></script>
   <script src="js/map.js"></script>
   <script src="js/filter.js"></script>
+  <script src="js/pictures.js"></script>
 </body>
 </html>
